--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -17,4 +17,5 @@
     <string name="sos">SOS</string>
     <string name="pending_requests">Pending Requests</string>
     <string name="send_requests">Send Requests</string>
+    <string name="input">Input</string>
 </resources>
